--- a/roles/nessus/tasks/main.yml
+++ b/roles/nessus/tasks/main.yml
@@ -13,5 +13,7 @@
       - "8834:8834"
     state: started
     pull: yes
+    env:
+      NESSUS_LICENSE: "{{ nessus_license }}"
   become: true
   tags: nessus
